--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyNotes">
-        <activity android:name=".EditNotesActivity"></activity>
-        <activity android:name=".ReadNotesActivity" />
-        <activity android:name=".AddNotesActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.EditNotesActivity"></activity>
+        <activity android:name=".activity.ReadNotesActivity" />
+        <activity android:name=".activity.AddNotesActivity" />
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
